fix: 🐛 performance refactor and fixes